default/objects/Class__c/fields/Class_Country__c.field-meta.xml
<CustomField>
    <fullName>Class_Country__c</fullName>
    <label>Class Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country1</valueSetName>
    </valueSet>
</CustomField>