default/objects/Class__c/fields/No_of_students__c.field-meta.xml
<CustomField>
    <fullName>No_of_students__c</fullName>
    <label>No of students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>