default/objects/Class__c/fields/Sub__c.field-meta.xml
<CustomField>
    <fullName>Sub__c</fullName>
    <label>Sub</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Standard__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Eng</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Physics-2</fullName>
            </value>
            <value>
                <fullName>Chemestry-2</fullName>
            </value>
            <value>
                <fullName>Mathematics-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>